// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BSelect calls on handlers 1`] = `
<li id="option-1" value="1" role="option" tabindex="-1" class="options">
    test-1
</li>
`;

exports[`BSelect calls on handlers 2`] = `
<li id="option-1" value="1" role="option" tabindex="-1" class="options">
    test-1
</li>
`;

exports[`BSelect opens list when div is mousedowned 1`] = `
<div class="b-select">
    <div>
        <label id="label-testId">test
            <!---->
        </label>
    </div>
    <button aria-owns="testId" aria-describedby="error-testId" aria-labelledby="label-testId dropdown-testId" id="dropdown-testId" text="test" aria-haspopup="listbox" type="button" class="dropdown placeholder">
        test placeholder
        <span class="dropdown-arrow"><i aria-hidden="true" class="icon ion-arrow-down-b"></i></span></button>
    <ul id="testId" role="listbox" class="" style="display: none;">
        <li id="option-1" value="1" role="option" tabindex="-1" class="options">
            test-1
        </li>
        <li id="option-2" value="2" role="option" tabindex="-1" class="options">
            test-2
        </li>
    </ul>
    <!---->
</div>
`;

exports[`BSelect opens list when div is mousedowned 2`] = `
<div class="b-select">
    <div>
        <label id="label-testId">test
            <!---->
        </label>
    </div>
    <button aria-owns="testId" aria-describedby="error-testId" aria-labelledby="label-testId dropdown-testId" id="dropdown-testId" text="test" aria-haspopup="listbox" type="button" class="dropdown-opened dropdown placeholder" aria-expanded="true">
        test placeholder
        <span class="dropdown-arrow"><i aria-hidden="true" class="icon ion-arrow-down-b"></i></span></button>
    <ul id="testId" role="listbox" class="ul-opened" style="">
        <li id="option-1" value="1" role="option" tabindex="-1" class="options">
            test-1
        </li>
        <li id="option-2" value="2" role="option" tabindex="-1" class="options">
            test-2
        </li>
    </ul>
    <!---->
</div>
`;

exports[`BSelect rendors a default select list 1`] = `
<div class="b-select">
    <div>
        <label id="label-testId">test
            <!---->
        </label>
    </div>
    <button aria-owns="testId" aria-describedby="error-testId" aria-labelledby="label-testId dropdown-testId" id="dropdown-testId" text="test" aria-haspopup="listbox" type="button" class="dropdown placeholder">
        Choose Option
        <span class="dropdown-arrow"><i aria-hidden="true" class="icon ion-arrow-down-b"></i></span></button>
    <ul id="testId" role="listbox" class="" style="display: none;">
        <li id="option-1" value="1" role="option" tabindex="-1" class="options">
            test-1
        </li>
        <li id="option-2" value="2" role="option" tabindex="-1" class="options">
            test-2
        </li>
    </ul>
    <!---->
</div>
`;

exports[`BSelect rendors a select list with a placeholder 1`] = `
<div class="b-select">
    <div>
        <label id="label-testId">test
            <!---->
        </label>
    </div>
    <button aria-owns="testId" aria-describedby="error-testId" aria-labelledby="label-testId dropdown-testId" id="dropdown-testId" text="test" aria-haspopup="listbox" type="button" class="dropdown placeholder">
        test placeholder
        <span class="dropdown-arrow"><i aria-hidden="true" class="icon ion-arrow-down-b"></i></span></button>
    <ul id="testId" role="listbox" class="" style="display: none;">
        <li id="option-1" value="1" role="option" tabindex="-1" class="options">
            test-1
        </li>
        <li id="option-2" value="2" role="option" tabindex="-1" class="options">
            test-2
        </li>
    </ul>
    <!---->
</div>
`;

exports[`BSelect rendors a select list with an initial value 1`] = `
<div class="b-select">
    <div>
        <label id="label-testId">test
            <!---->
        </label>
    </div>
    <button aria-owns="testId" aria-describedby="error-testId" aria-labelledby="label-testId dropdown-testId" id="dropdown-testId" text="test" aria-haspopup="listbox" type="button" class="dropdown">
        test-2
        <span class="dropdown-arrow"><i aria-hidden="true" class="icon ion-arrow-down-b"></i></span></button>
    <ul id="testId" role="listbox" class="" style="display: none;">
        <li id="option-1" value="1" role="option" tabindex="-1" class="options">
            test-1
        </li>
        <li aria-selected="true" id="option-2" value="2" role="option" tabindex="-1" class="options">
            test-2
        </li>
    </ul>
    <!---->
</div>
`;

exports[`BSelect throws error if option not chosen when required 1`] = `
<div class="b-select">
    <div>
        <label id="label-testId">test<span aria-label="Required">*</span></label>
    </div>
    <button aria-owns="testId" aria-required="true" aria-describedby="error-testId" aria-labelledby="label-testId dropdown-testId" id="dropdown-testId" text="test" aria-haspopup="listbox" type="button" class="dropdown placeholder">
        Choose Option
        <span class="dropdown-arrow"><i aria-hidden="true" class="icon ion-arrow-down-b"></i></span></button>
    <ul id="testId" role="listbox" class="" style="display: none;">
        <li id="option-1" value="1" role="option" tabindex="-1" class="options">
            test-1
        </li>
        <li id="option-2" value="2" role="option" tabindex="-1" class="options">
            test-2
        </li>
    </ul>
    <!---->
</div>
`;
